tests/types/errors/bitwise_bool_operand.mog
#!strict
bool flag = true;
i32 mask = 1;
print(flag & mask);
